force-app/main/default/objects/Wildfire_Risk_Score__c/fields/Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tier__c</fullName>
    <label>Risk Tier</label>
    <type>Text</type>
    <formula>IF(Total_Risk_Score__c >= 80, "Critical", IF(Total_Risk_Score__c >= 60, "High", IF(Total_Risk_Score__c >= 40, "Medium", "Low")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>