force-app/main/default/objects/Wildfire_Risk_Score__c/fields/Total_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Risk_Score__c</fullName>
    <label>Total Risk Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>NULLVALUE(Defect_Score__c, 0) + NULLVALUE(Age_Score__c, 0) + NULLVALUE(HFTD_Zone_Score__c, 0) + NULLVALUE(Clearance_Score__c, 0) + NULLVALUE(Vegetation_Score__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>